# flask-impressionador

./: .gitignore  forms.py  jedi_db.sqlite  main.py  models.py  pyproject.toml  requirements.txt
jedi/: __init__.py  forms.py  jedi_db.sqlite  models.py  routes.py
jedi/static/css/: main.css
jedi/templates/: base.html  contato.html  errors.html  home.html  index.html  navbar.html  perfil.html  perfil_editar.html  post.html  post_criar.html  usuarios.html
templates/: base.html  contato.html  home.html  login.html  navbar.html  usuarios.html
tests/: test_incolumepy_curso_python_impressionador_flask.py
