[tool.poetry]
name = "incolumepy.curso.python_impressionador.flask"
version = "0.1.1"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
# New attributes
packages=[
  {include = 'incolumepy/curso/python_impressionador/flask', from='src'},
]

license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = [""]
classifiers = [
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Education",
  "Topic :: Education:: Testing",
  "Topic :: Utilities"
]
include = [
  "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
